--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  sqflite: any
+  path_provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
