--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   
   sqflite: any
   path_provider: any
+  provider: any
 
 
   # The following adds the Cupertino Icons font to your application.
